--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,8 @@
 :root {
+    --background: #FFF;
+    --background-t: #FFFFFF99;
+    --text-color: #222;
+    --border: #AAA;
 	--accent: #2337ff;
 	--accent-dark: #000d8a;
 	--black: 15, 18, 25;
@@ -10,6 +14,15 @@
 		0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
 		0 16px 32px rgba(var(--gray), 33%);
 }
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --background: #000;
+        --background-t: #00000099;
+        --text-color: #DDD;
+    }
+}
+
 @font-face {
 	font-family: 'Atkinson';
 	src: url('/fonts/atkinson-regular.woff') format('woff');
