--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE_NAV } from '../consts';
 
 <header>
 	<nav>
-        <img src="/favicon.svg" width={50} height={50} />
+        <img src="/favicon.svg" width={40} height={40} />
 		<div class="internal-links">
 			<HeaderLink href="/">Home</HeaderLink>
 			<HeaderLink href="/blog">Blog</HeaderLink>
@@ -20,6 +20,7 @@ import { SITE_TITLE_NAV } from '../consts';
         backdrop-filter: blur(20px);
         position: sticky;
         top: 0;
+        z-index: 2;
     }
 	nav {
 		display: flex;
