--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -54,20 +54,20 @@ const posts = (await getCollection('blog')).sort(
 			}
 			.title {
 				margin: 0;
-				color: rgb(var(--black));
+				color: var(--text-color);
 				line-height: 1;
 			}
 			.date {
 				margin: 0;
-				color: rgb(var(--gray));
+				color: var(--text-faded);
 			}
 			ul li a:hover h4,
 			ul li a:hover .date {
 				color: rgb(var(--accent));
 			}
 			ul a:hover img {
-				box-shadow: var(--box-shadow);
-			}
+                transform: scale(1.05);
+            }
 			@media (max-width: 720px) {
 				ul {
 					gap: 0.5em;
