add: minimal rebrand

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -2,7 +2,6 @@
 import type { CollectionEntry } from 'astro:content';
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
 
 type Props = CollectionEntry<'blog'>['data'];
@@ -17,23 +16,36 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 			main {
 				width: calc(100% - 2em);
 				max-width: 100%;
-				margin: 0;
+                margin: 0;
 			}
-			.hero-image {
-				width: 100%;
-			}
-			.hero-image img {
+            .hero-image-stack {
+                width: 100%;
+                position: relative:
+            }
+            .hero-image {
+                width: 100%;
+                max-width: 99vw;
+            }
+            .hero-image .clear {
+                z-index: 1;
+                position: absolute;
+            }
+            .hero-image img {
 				display: block;
 				margin: 0 auto;
 				border-radius: 12px;
-				box-shadow: var(--box-shadow);
-			}
+            }
+            .hero-image .blur {
+                z-index: 0;
+                filter: blur(50px);
+                transform: scale(.95) translateY(15px);
+            }
 			.prose {
-				width: 720px;
+				width: 820px;
 				max-width: calc(100% - 2em);
 				margin: auto;
 				padding: 1em;
-				color: rgb(var(--gray-dark));
+                color: var(--text-color);
 			}
 			.title {
 				margin-bottom: 1em;
@@ -46,7 +58,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 			}
 			.date {
 				margin-bottom: 0.5em;
-				color: rgb(var(--gray));
+				color: var(--text-faded);
 			}
 			.last-updated-on {
 				font-style: italic;
@@ -58,8 +70,13 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 		<Header />
 		<main>
 			<article>
-				<div class="hero-image">
-					{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
+                <div class="hero-image stack">
+                    <div class="hero-image clear">
+                        {heroImage && <img width={1020} height={510} src={heroImage} />}
+                    </div>
+                    <div class="hero-image blur">
+                        {heroImage && <img width={1020} height={510} src={heroImage} />}
+                    </div>
 				</div>
 				<div class="prose">
 					<div class="title">
@@ -74,12 +91,10 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 							}
 						</div>
 						<h1>{title}</h1>
-						<hr />
 					</div>
 					<slot />
 				</div>
 			</article>
 		</main>
-		<Footer />
 	</body>
 </html>
