--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,8 +7,7 @@ import { SITE_TITLE_NAV } from '../consts';
 	<nav>
         <img src="/favicon.svg" width={40} height={40} />
 		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
+			<HeaderLink href="/">Blog</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
         </div>
         <div />
