--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,7 +64,7 @@ h4,
 h5,
 h6 {
 	margin: 0 0 0.5rem 0;
-	color: rgb(var(--black));
+	color: var(--text-color);
 	line-height: 1.2;
 }
 h1 {
@@ -133,7 +133,7 @@ blockquote {
 }
 hr {
 	border: none;
-	border-top: 1px solid rgb(var(--gray-light));
+	border-top: 1px solid var(--border);
 }
 @media (max-width: 720px) {
 	body {
