--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,8 +4,7 @@ import Layout from '../layouts/BlogPost.astro';
 
 <Layout
 	title="About Us"
-	description="Lorem ipsum dolor sit amet"
-	pubDate={new Date('August 08 2021')}
+	pubDate={new Date("March 8 2025")}
 	heroImage="/16_9-landscape-icon.png"
 >
     <p>
