--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -65,8 +65,45 @@ import Layout from '../layouts/BlogPost.astro';
         no exploitation, just fair value for what you create.
     </p>
 
+    <h2>Roadmap</h2>
+
+    <ul style="list-style-type: none;">
+        <li>
+            <input type="checkbox" checked disabled>
+            Study the feasibility of the project
+        </li>
+        <li>
+            <input type="checkbox" checked disabled>
+            Go in depth with consumers and developers privacy needs
+        </li>
+        <li>
+            <input type="checkbox" disabled>
+            Deploy a SaaS based on Datalis commitments and its API
+        </li>
+        <li>
+            <input type="checkbox" disabled>
+            Create and patent new anonymization techniques 
+        </li>
+        <li>
+            <input type="checkbox" disabled>
+            Create and patent a new protocol for data harvesting and selling
+        </li>
+        <li>
+            <input type="checkbox" disabled>
+            Deploy the new anonymization techniques to the SaaS
+        </li>
+        <li>
+            <input type="checkbox" disabled>
+            Deploy the new protocol to the SaaS
+        </li>
+        <li>
+            <input type="checkbox" disabled>
+            Release a marketplace for data
+        </li>
+    </ul>
+
+
     <p>
-        <strong>Ready to own your data ?</strong> A fundraising will start
-        soon...
+        <strong>Ready to own your data ?</strong>
     </p>
 </Layout>
